# read_rules_thru_mcp

./: LICENSE.md  PRD.md  README.md  main.py  pyproject.toml
.cursor/rules/: remote_rules.mdc
test_rules/: myrule.md
